# minic-compiler

./: .gitignore  README.md  a.in  example  example.l  lex.yy.c
data/: example  example.c  example.e  example.i  example.t  example_oup.c
exp/: constants.h  lexer_exp.l
scripts/: readable_i  readable_i.cpp
src/: CMakeLists.txt  Makefile  main.c
src/common/: utils.c  utils.h
src/eeyore2tigger/: eeyore_parser.c  eeyore_parser.h  tigger_gen.c  tigger_gen.h
src/minic2eeyore/: Makefile  autotest.py  constants.h  gen_eey.c  gen_eey.h  lex.yy.c  lexer.l  main  minic2eeyore  name_hash.c  name_hash.h  oup.txt  parser.tab.c  parser.tab.h  parser.y  result.txt  rule.txt  syntax_tree.c  syntax_tree.h  tigger.txt  utils.c  utils.h  y.output  y.tab.c  y.tab.h
src/tigger2riscv/: riscv_translate.c  riscv_translate.h
third_party_exec/: minivm
